sandbox/output
Hiker.java:10: error: incompatible types: char cannot be converted to String
            del = token.charAt(3);
                              ^
1 error
